--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nfe-sync"
-version = "0.2.14"
+version = "0.2.15"
 requires-python = ">=3.12"
-dependencies = ["pynfe>=0.6.5", "python-dotenv", "pydantic>=2.0", "requests"]
+dependencies = ["pynfe>=0.6.5", "python-dotenv", "pydantic>=2.0", "requests", "signxml"]
 
 [project.optional-dependencies]
 dev = ["pytest"]
