feat: #59 #61 #62 #63 — testes E2E via subprocess parametrizaveis
* feat: #59 — testes E2E via subprocess com --emitente/--destinatario parametrizaveis

* fix: #61 — serie configuravel via --serie nos testes E2E (padrao 99)

* fix: #62 #63 — corrigir comentario cStat 137/138 e adicionar timeout=120 em run_nfe

* fix: #63 — reduzir timeout padrao de run_nfe para 30s

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nfe-sync"
-version = "0.2.72"
+version = "0.2.76"
 requires-python = ">=3.12"
 dependencies = ["pynfe>=0.6.5", "python-dotenv", "pydantic>=2.0", "requests", "signxml"]
 
@@ -18,3 +18,9 @@ api_cli = "nfe_sync.apis.cli:cli"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["nfe_sync", "nfe_sync.*"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+markers = [
+    "slow: testes que chamam a SEFAZ (requerem certificado e conexao real)",
+]
